--- a/Sheffle/MainStoryboard_iPhone.storyboard
+++ b/Sheffle/MainStoryboard_iPhone.storyboard
@@ -177,18 +177,17 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="7vn-bT-UQa">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="cyg-28-oNE"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="MhQ-jt-eq9"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dDn-yg-F0y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1374" y="254"/>
+            <point key="canvasLocation" x="1904" y="-438"/>
         </scene>
         <!--Book Search View Controller-->
         <scene sceneID="91t-CH-lAf">
             <objects>
-                <tableViewController id="Vwe-LI-V9D" customClass="SFBookSearchViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="BookSearchView" id="Vwe-LI-V9D" customClass="SFBookSearchViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="QKi-wa-cCn">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -269,14 +268,14 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1823" y="-450"/>
+            <point key="canvasLocation" x="1904" y="916"/>
         </scene>
         <!--Shelf View Controller-->
         <scene sceneID="v9f-aO-wjr">
             <objects>
                 <viewController id="fXz-FU-MVf" customClass="SFShelfViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0Nw-J2-rDF">
-                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -287,8 +286,8 @@
                     <connections>
                         <outlet property="searchDisplayController" destination="FUa-M4-BAn" id="EQD-Tp-hn8"/>
                         <segue destination="jYO-vu-AXV" kind="push" identifier="showBook" id="yeA-Ua-hvz"/>
-                        <segue destination="Ha8-FL-4IJ" kind="modal" id="Sfv-6I-x64"/>
-                        <segue destination="9BO-9M-xiQ" kind="modal" id="2Ph-r6-4aU"/>
+                        <segue destination="scS-8d-OfF" kind="modal" identifier="showShelfList" id="2Ph-r6-4aU"/>
+                        <segue destination="xGt-ux-34z" kind="modal" identifier="showSearch" id="eOt-8q-vyY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Waq-WR-FFQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -301,14 +300,14 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="822" y="246"/>
+            <point key="canvasLocation" x="800" y="-2"/>
         </scene>
         <!--Book View Controller-->
         <scene sceneID="nid-qq-5Gd">
             <objects>
                 <tableViewController id="jYO-vu-AXV" customClass="SFBookViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="R7R-lr-Xcj">
-                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
@@ -347,7 +346,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oOf-As-k01" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1374" y="932"/>
+            <point key="canvasLocation" x="1378" y="240"/>
         </scene>
         <!--Books View Controller-->
         <scene sceneID="9uL-ex-lD8">
@@ -421,7 +420,7 @@
                         <outlet property="addButton" destination="JeT-8Q-Gae" id="1hX-l0-WNF"/>
                         <outlet property="searchDisplayController" destination="bTB-Ik-zIm" id="CWt-Qo-Ib0"/>
                         <outlet property="sortControl" destination="B6g-l2-BMT" id="642-cq-59I"/>
-                        <segue destination="Ha8-FL-4IJ" kind="modal" id="EQq-ml-sax"/>
+                        <segue destination="xGt-ux-34z" kind="modal" identifier="showSearch" id="ZBy-Xj-rNa"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s7M-Tg-XvV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -462,18 +461,21 @@
             <objects>
                 <tableViewController id="SBK-QC-iLv" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="IIC-HA-ARa">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="m1M-Fl-oLC">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="m1M-Fl-oLC">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <connections>
+                                    <segue destination="fXz-FU-MVf" kind="push" identifier="showShelf" id="2es-1r-9TK"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -481,10 +483,11 @@
                             <outlet property="delegate" destination="SBK-QC-iLv" id="0tx-ZW-fHW"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="sCT-AS-Pya"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xiU-jl-Qz3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-156" y="1358"/>
+            <point key="canvasLocation" x="310" y="1358"/>
         </scene>
         <!--Navigation Controller - Shelves-->
         <scene sceneID="110-hI-bPT">
@@ -511,22 +514,58 @@
             <point key="canvasLocation" x="-156" y="12"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="2S4-7V-Sj1">
+        <scene sceneID="m9o-0J-W5t">
             <objects>
-                <navigationController id="Ha8-FL-4IJ" sceneMemberID="viewController">
+                <navigationController id="PqS-xC-cLc" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="a8S-RQ-2nV">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="n4m-Mg-RIL">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Vwe-LI-V9D" kind="relationship" relationship="rootViewController" id="Cmq-vm-57d"/>
+                        <segue destination="SBK-QC-iLv" kind="relationship" relationship="rootViewController" id="vYN-hY-yRP"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BAg-Hu-YM4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J7Z-a0-GbD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1380" y="-450"/>
+            <point key="canvasLocation" x="-156" y="1358"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1j5-xM-zKu">
+            <objects>
+                <navigationController id="xGt-ux-34z" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hp7-QD-EoS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Vwe-LI-V9D" kind="relationship" relationship="rootViewController" id="ole-of-E6Z"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eF1-F2-WtL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1378" y="916"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="6ks-Df-CzS">
+            <objects>
+                <navigationController id="scS-8d-OfF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Lv0-8L-mNS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9BO-9M-xiQ" kind="relationship" relationship="rootViewController" id="jID-CQ-Yqx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IKy-YO-BVq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1378" y="-438"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -535,7 +574,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="ZBy-Xj-rNa"/>
+        <segue reference="2es-1r-9TK"/>
         <segue reference="yeA-Ua-hvz"/>
-        <segue reference="Sfv-6I-x64"/>
     </inferredMetricsTieBreakers>
 </document>
